# Notes-System

./: Anchor.toml
programs/commmonmarket/: Cargo.toml
programs/commmonmarket/src/: errors.rs  lib.rs
programs/commmonmarket/src/instructions/: exchange.rs  main_account.rs  mod.rs  sell.rs
programs/commmonmarket/src/state/: accounts.rs
programs/notes_system/: Cargo.toml
programs/notes_system/src/: errors.rs  lib.rs
programs/notes_system/src/instructions/: mod.rs  recovery.rs  school_main_account.rs  school_notes.rs  school_register.rs  student_register.rs
programs/notes_system/src/state/: accounts.rs
programs/solotery/src/: errors.rs  lib.rs
programs/solotery/src/instructions/: initialize.rs  ticket.rs
tests/: Account.ts  Check.ts  Create.ts  Exchange.ts  MainAccount.ts  Sell.ts  Ticket.ts  solotery.ts
tests/Blockchain/: ChooseWinner.ts  Create.ts  SendAmountToWinner.ts
tests/Users/: BuyShare.ts  CheckIt.ts  OneTicket.ts
