[package]
name = "commonmarket"
version = "0.1.0"
description = "The International Common Market"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "commonmarket"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.25.0"
